--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==4.2
 django-rest-swagger==2.2.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
+drf-nested-routers==0.94.2
 drf-yasg==1.21.10
 gunicorn==23.0.0
 idna==3.10
