--- a/requirements.txt
+++ b/requirements.txt
@@ -36,6 +36,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 PyYAML==6.0.2
+redis==5.2.1
 requests==2.32.5
 simplejson==3.20.1
 six==1.17.0
